--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
         integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+        <!-- META TAG DE OG-->
+
+        <meta property="og:type" content="website" >
+        <meta property="og:title" content="Hamburgueria" >
+        <meta property="og:image" content="https://cardapio-iota-two.vercel.app/assets/hamb-1.png" >
+        <meta property="og:description" content="O melhor hamburguer do mundo!" >
+        <meta property="og:site_name" content="hamburguer" >
+
+
     <link rel="stylesheet" href="./styles/output.css" />
 
     <title>Cardápio</title>
